# MeuxCompanion

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  f.txt  index.html  m.txt  main_app.py  package-lock.json  package.json  requirements.txt  tsconfig.tsbuildinfo  vite.config.ts
.cargo/: config.toml
.jules/: bolt.md
characters/: aniya.md  ariu.md  loopa.md  luna.md  miku.md  pachan.md  rika.md  sparke.md
crates/meux-core/: Cargo.toml
crates/meux-core/src/: composio_toolkits.rs  error.rs  lib.rs  retry.rs
crates/meux-core/src/character/: expressions.rs  mod.rs  types.rs
crates/meux-core/src/config/: mod.rs  types.rs
crates/meux-core/src/context/: mod.rs
crates/meux-core/src/expressions/: mod.rs
crates/meux-core/src/llm/: openai_compat.rs  types.rs
crates/meux-core/src/memory/: extractor.rs  mod.rs  retriever.rs  store.rs
crates/meux-core/src/memory_vault/: mod.rs  store.rs  types.rs  vault_writer.rs
crates/meux-core/src/prompt/: mod.rs
crates/meux-core/src/session/: mod.rs  types.rs
crates/meux-core/src/state/: mod.rs
crates/meux-core/src/tools/: clipboard.rs  desktop.rs  file_ops.rs  mod.rs  shell.rs  types.rs  web_search.rs
crates/meux-core/src/tts/: mod.rs  openai.rs  tiktok.rs
docs/: backend-character-memory-architecture.md  cloud-agent-environment.md
frontend/: index.html  package-lock.json  package.json
meuxcompanion-desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
meuxcompanion-desktop/crates/meux-core/: Cargo.toml
meuxcompanion-desktop/crates/meux-core/src/: error.rs  lib.rs
meuxcompanion-desktop/crates/meux-core/src/character/: mod.rs  types.rs
meuxcompanion-desktop/crates/meux-core/src/config/: mod.rs  types.rs
meuxcompanion-desktop/crates/meux-core/src/expressions/: mod.rs
meuxcompanion-desktop/crates/meux-core/src/llm/: mod.rs  openai_compat.rs  types.rs
meuxcompanion-desktop/crates/meux-core/src/memory/: retriever.rs  store.rs
meuxcompanion-desktop/crates/meux-core/src/session/: mod.rs
meuxcompanion-desktop/crates/meux-core/src/state/: types.rs
meuxcompanion-desktop/crates/meux-core/src/tts/: elevenlabs.rs  tiktok.rs
meuxcompanion-desktop/src-tauri/: Cargo.toml  tauri.conf.json
meuxcompanion-desktop/src-tauri/capabilities/: default.json
meuxcompanion-desktop/src-tauri/src/: lib.rs  tray.rs  window.rs
meuxcompanion-desktop/src-tauri/src/commands/: characters.rs  chat.rs  config.rs  expressions.rs  memory.rs  state.rs  tts.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  window.rs
src-tauri/src/commands/: characters.rs  chat.rs  config.rs  expressions.rs  memory.rs  mod.rs  state.rs  tools.rs  tts.rs  voice.rs
(+111 files in other folders)
