[package]
name = "meuxcompanion-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
meux-core = { path = "../crates/meux-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
futures = "0.3"
base64 = "0.22"
http = "1"
percent-encoding = "2"
rfd = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart"] }
whisper-rs = "0.14"
dashmap = "6"
tokio-util = "0.7"
