[package]
name = "meux-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "=1.11.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
pulldown-cmark = "0.12"
thiserror = "2"
base64 = "0.22"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
shellexpand = "3"
dirs = "5"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
sha2 = "0.10.9"
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
walkdir = "=2.5.0"

[dev-dependencies]
tempfile = "=3.20.0"
tokio = { version = "1", features = ["full", "test-util"] }
